# multi-logger

./: pyproject.toml
package/clients/: telegram.py
package/logger/: __init__.py
tests/: test_emoji_map.py
